Consolidated CSS code. Added ID to fix link usage.Added comments. Changed coloring of links and header for readability. Will commit more often from now on

--- a/Code/style.css
+++ b/Code/style.css
@@ -1,4 +1,5 @@
 * {
+    /*Adds default content styling*/
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -9,6 +10,7 @@ body {
 }
 
 .header {
+    /*Horiseon Name Title*/
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -21,14 +23,21 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    /*Changes the "seo" in Horiseon to a green color to accentuate search engine optimization*/
+    color: #b6e487;
+}
+
+.header div, .benefits, .search-engine-optimization,
+.online-reputation-management, .social-media-marketing, .footer {
+    /*Consolidated and organized to follow semantic structure*/
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .header div {
+    /*Properties applied to the ul items*/
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
@@ -42,37 +51,43 @@ body {
 }
 
 a {
-    color: #ffffff;
+    /*Sets the properties of the list items*/
+    color: #b6e487;
     text-decoration: none;
 }
 
 p {
+    /*Sets the properties of the paragraphs*/
     font-size: 16px;
 }
 
 .hero {
+    /*Sets the properties of the box the digital marketing meeting picture is located in.*/
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url(./Pictures/digital-marketing-meeting.jpg);
     background-size: cover;
     background-position: center;
 }
 
+.content {
+    /*Updated to reflect actual order of CSS properties- moved upwards by a couple properties*/
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
 .float-left {
+    /*Placement of SEO JPG and SMM JPG*/
     float: left;
     margin-right: 25px;
 }
 
 .float-right {
+    /*Placement of ORM JPG*/
     float: right;
     margin-left: 25px;
-}
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
 }
 
 .benefits {
@@ -82,81 +97,30 @@ p {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-lead, .benefit-brand, .benefit-cost {
+    /*Consolidated and organized to follow semantic structure*/
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-brand h3, .benefit-cost h3, .benefit-lead h3 {
     margin-bottom: 10px;
-    text-align: center;
+    text-align: center; 
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-lead img, .benefit-brand img, .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
 }
